--- a/src/app/pages/base.scss
+++ b/src/app/pages/base.scss
@@ -66,6 +66,10 @@
     letter-spacing: 1px;
     transition: color 0.3s ease-in-out;
   }
+
+  button:hover {
+    color: var(--hover-color);
+  }
 }
 
 .description-contact-page,
@@ -80,8 +84,6 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   line-height: 24px;
-
-
 }
 
 a {
