--- a/src/app/pages/training-page/training-page.component.html
+++ b/src/app/pages/training-page/training-page.component.html
@@ -1,6 +1,7 @@
 <div id="container-training-page">
   <div class="base-training-page">
     <h1 class="animate__animated animate__fadeIn">{{ trainingData.titleObject }}</h1>
+    <span class="subtitle-training-page">{{ randomText.moreDetails }}</span>
     <div *ngFor="let item of trainingData.data" class="flip-card animate__animated animate__zoomIn">
       <div class="flip-card-inner">
         <div class="flip-card-front">
