--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,10 +46,18 @@ html, body {
   display: none !important;
 }
 
+.slide {
+  overflow: hidden;
+}
+
 .fp-slidesNav.fp-bottom {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.fp-overflow {
+  overflow: hidden;
 }
 
 .fp-arrow {
