--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -47,7 +47,7 @@
     position: relative;
 
     img {
-      max-width: 100%;
+      max-width: 500px;
       max-height: 80vh;
       width: auto;
       height: auto;
